# sessioni_sotterranee

./: README.md  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Sessioni Sotterranee/Sessioni Sotterranee/: ApiClient.swift  AppFeature.swift  AuthClient.swift  AuthMiddleware.swift  HomeFeature.swift  LoginFeature.swift  MainChatFeature.swift  RootFeature.swift  Sessioni_SotterraneeApp.swift  WebSocketClient.swift  openapi.yaml
ios/Sessioni Sotterranee/Sessioni Sotterranee.xcodeproj/: project.pbxproj
ios/Sessioni Sotterranee/Sessioni SotterraneeTests/: Sessioni_SotterraneeTests.swift
ios/Sessioni Sotterranee/Sessioni SotterraneeUITests/: Sessioni_SotterraneeUITests.swift  Sessioni_SotterraneeUITestsLaunchTests.swift
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
mobile/: api_specs.json  api_specs3.json  gradle.properties  settings.gradle.kts
mobile/.fleet/: receipt.json
mobile/composeApp/: build.gradle.kts
mobile/gradle/: libs.versions.toml
mobile/iosApp/Configuration/: Config.xcconfig
mobile/iosApp/iosApp/: AppView.swift  KMPObservableViewModel.swift.swift  LoginView.swift  RootView.swift  iOSApp.swift
mobile/iosApp/iosApp.xcodeproj/: project.pbxproj
mobile/shared/: build.gradle.kts
server/: .env  .gitignore  Cargo.toml  Dockerfile  Taskfile.yaml  api_specs.json  docker-compose.yml  make_specs.sh  temp.d.ts
server/api/: Cargo.toml
server/api/src/: api.rs  docs.rs  error.rs  extractors.rs  lib.rs  logto_access_token.rs  main.rs  models.rs  oauth.rs  state.rs  ws.rs
server/api/src/api/: event.rs  main_chat.rs  user.rs
server/api/src/extractors/: logto_wh.rs
server/api/src/ws/: models.rs  state.rs
server/entity/: Cargo.toml
server/entity/src/: attending.rs  event.rs  event_attending.rs  event_interested.rs  interested.rs  lib.rs  main_message.rs  prelude.rs  role.rs  sea_orm_active_enums.rs  session.rs  street_jam.rs  street_jam_message.rs  user.rs  (+2 more)
server/logto/: Dockerfile  nginx.conf  run.sh
server/service/: Cargo.toml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+57 files in other folders)
